- Basic brightness/contrast manipulation added to annotation tool.  However, it currently doesn't mix well with zooming, breaks the background-loading of the fullres image, and uses text fields instead of sliders.  Will address these issues next. - Added a custom build of Pixastic.  For now, it only has the core, jQuery plugin, and brightness/contrast modules.

--- a/annotations/static/css/annotation_tool.css
+++ b/annotations/static/css/annotation_tool.css
@@ -17,7 +17,7 @@
     position: absolute;
     overflow: hidden;
 }
-#annotationImage {
+#imageCanvas {
     position: absolute;
 }
 #pointsCanvas {
